# Proofread_English_Paper_System

./: .gitignore  CLAUDE.md  Dockerfile  README copy.md  README.md  current_api_endpoints.md  pyproject.toml  test.py  test_sample.tex
app/: main.py
app/api/: api.py
app/api/routes/: analyze_document.py  knowledge_pipeline.py  latex_split_test.py  proofread_english_paper.py  store_and_search_db.py
app/schemas/: schemas.py
app/services/: access_google_drive.py  analyze_document_process.py  chunking_file.py  create_queries_by_HyDE.py  csv_to_db.py  execute_knowledge_pipeline.py  proofread_english_paper.py  proofread_paper_by_knowledge.py  search_knoeledge.py  structure_pdf_to_knowledge.py  structure_tex_to_knowledge.py
app/services/knowledge/: __init__.py  access_google_drive.py  chunking_file.py  csv_to_db.py  execute_knowledge_pipeline.py  search_knowledge.py  structure_pdf_to_knowledge.py  structure_tex_to_knowledge.py
app/services/proofreading/: __init__.py  analyze_document_process.py  create_queries_by_HyDE.py  proofread_english_paper.py  proofread_paper_by_knowledge.py
app/services/shared/: __init__.py  client_factory.py  (+3 more)
document_intelligence_cache/: cache_metadata.json
enhanced_di_cache/: cache_metadata.db
libs/: azure_client.py
output/: analysis_result_20250506_012042.json  knowledge_20250521_164115.csv  knowledge_20250523_102317.csv  knowledge_20250605_143124.csv  knowledge_20250605_144052.csv  knowledge_20250612_165253.csv  knowledge_20250619_125007.csv  knowledge_20250619_135040.csv  knowledge_20250623_125242.csv
static/: index.html
(+35 files in other folders)
